springboot知识整理总结--集成websocket框架！

--- a/build.gradle
+++ b/build.gradle
@@ -30,19 +30,28 @@ repositories {
 }
 
 ext {
-    fastjson_version = "1.2.58"
+    fastjson_version = "1.2.68"
+    fastjson_kotlin_version = "2.10.3"
 }
 
 dependencies {
     implementation "org.springframework.boot:spring-boot-starter"
-    implementation "org.springframework.boot:spring-boot-starter-web"
     implementation "org.springframework.boot:spring-boot-starter-webflux"
+    implementation "org.springframework.boot:spring-boot-starter-data-rest"
+    implementation "org.springframework.boot:spring-boot-starter-thymeleaf"
+    implementation "org.springframework.boot:spring-boot-starter-websocket"
 
     implementation "com.alibaba:fastjson:${fastjson_version}"
+    implementation "com.fasterxml.jackson.module:jackson-module-kotlin:${fastjson_kotlin_version}"
+
+
+    implementation 'org.webjars.npm:bootstrap:4.4.1'
+    implementation 'org.webjars.npm:jquery:3.5.0'
+    implementation 'org.webjars.npm:sockjs-client:1.4.0'
+    implementation 'org.webjars:stomp-websocket:2.3.3'
 
     runtimeOnly "org.springframework:spring-context-indexer"
     compileOnly "org.projectlombok:lombok"
-    // developmentOnly "org.springframework.boot:spring-boot-devtools"
     annotationProcessor "org.projectlombok:lombok"
     testImplementation "org.springframework.boot:spring-boot-starter-test"
 }
