--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,10 @@ repositories {
 ext {
     fastjson_version = "1.2.68"
     fastjson_kotlin_version = "2.10.3"
+    mybatis_spring_version = "2.1.2"
+    pagehelper_version = "1.2.13"
+    druid_spring_version = "1.1.22"
+    mysql_java_version = "5.1.48"
 }
 
 dependencies {
@@ -40,10 +44,13 @@ dependencies {
     implementation "org.springframework.boot:spring-boot-starter-data-rest"
     implementation "org.springframework.boot:spring-boot-starter-thymeleaf"
     implementation "org.springframework.boot:spring-boot-starter-websocket"
-
+    implementation "com.alibaba:druid-spring-boot-starter:${druid_spring_version}"
     implementation "com.alibaba:fastjson:${fastjson_version}"
     implementation "com.fasterxml.jackson.module:jackson-module-kotlin:${fastjson_kotlin_version}"
+    implementation "org.mybatis.spring.boot:mybatis-spring-boot-starter:${mybatis_spring_version}"
+    implementation "com.github.pagehelper:pagehelper-spring-boot-starter:${pagehelper_version}"
 
+    runtimeOnly "mysql:mysql-connector-java:${mysql_java_version}"
 
     implementation 'org.webjars.npm:bootstrap:4.4.1'
     implementation 'org.webjars.npm:jquery:3.5.0'
