--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ repositories {
 }
 
 ext {
+    jasypt_version = "3.0.2"
     fastjson_version = "1.2.68"
     fastjson_kotlin_version = "2.10.3"
     mybatis_spring_version = "2.1.2"
@@ -49,6 +50,7 @@ dependencies {
     implementation "com.fasterxml.jackson.module:jackson-module-kotlin:${fastjson_kotlin_version}"
     implementation "org.mybatis.spring.boot:mybatis-spring-boot-starter:${mybatis_spring_version}"
     implementation "com.github.pagehelper:pagehelper-spring-boot-starter:${pagehelper_version}"
+    implementation "com.github.ulisesbocchio:jasypt-spring-boot-starter:${jasypt_version}"
 
     runtimeOnly "mysql:mysql-connector-java:${mysql_java_version}"
 
