--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ repositories {
 ext {
     jasypt_version = "3.0.2"
     fastjson_version = "1.2.68"
+    findbugs_version = "3.0.1"
     fastjson_kotlin_version = "2.10.3"
     mybatis_spring_version = "2.1.2"
     pagehelper_version = "1.2.13"
@@ -45,12 +46,16 @@ dependencies {
     implementation "org.springframework.boot:spring-boot-starter-data-rest"
     implementation "org.springframework.boot:spring-boot-starter-thymeleaf"
     implementation "org.springframework.boot:spring-boot-starter-websocket"
+    implementation "org.springframework.boot:spring-boot-starter-data-elasticsearch"
+    implementation "org.springframework.boot:spring-boot-starter-data-redis-reactive"
+    implementation "org.springframework.boot:spring-boot-starter-data-mongodb-reactive"
     implementation "com.alibaba:druid-spring-boot-starter:${druid_spring_version}"
     implementation "com.alibaba:fastjson:${fastjson_version}"
     implementation "com.fasterxml.jackson.module:jackson-module-kotlin:${fastjson_kotlin_version}"
     implementation "org.mybatis.spring.boot:mybatis-spring-boot-starter:${mybatis_spring_version}"
     implementation "com.github.pagehelper:pagehelper-spring-boot-starter:${pagehelper_version}"
     implementation "com.github.ulisesbocchio:jasypt-spring-boot-starter:${jasypt_version}"
+    implementation "com.google.code.findbugs:annotations:${findbugs_version}"
 
     runtimeOnly "mysql:mysql-connector-java:${mysql_java_version}"
 
